--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "test": "next test"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -11,7 +13,7 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "latest",
+    "next": "15.5.1-canary.35",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
@@ -26,7 +28,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
+    "@types/react-dom": "19.0.3",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "15.5.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
