--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.0",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "^2",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
@@ -20,22 +24,19 @@
     "postgres": "^3.4.6",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "^4.1.0",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
-    "zod": "^3.25.17",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-shell": "^2"
+    "zod": "^3.25.17"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.35.0",
-    "eslint-config-next": "15.5.2",
-    "@tauri-apps/cli": "^2"
+    "eslint-config-next": "15.5.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
