--- a/package.json
+++ b/package.json
@@ -6,41 +6,48 @@
     "start": "next start",
     "lint": "next lint",
     "test": "next test",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "package": "bun move-binary.mjs"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.0",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-shell": "^2",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tauri-apps/api": "^2.8.0",
+    "@tauri-apps/plugin-opener": "^2.5.0",
+    "@tauri-apps/plugin-shell": "~2.3.1",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "next": "15.5.1-canary.35",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
-    "postgres": "^3.4.6",
+    "postgres": "^3.4.7",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "^4.1.0",
+    "tailwindcss": "^4.1.13",
     "typescript": "5.7.3",
-    "use-debounce": "^10.0.4",
-    "zod": "^3.25.17"
+    "use-debounce": "^10.0.6",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2",
+    "@skeletonlabs/skeleton": "^3.2.2",
+    "@skeletonlabs/skeleton-react": "^1.4.1",
+    "@tauri-apps/cli": "^2.8.4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
-    "eslint": "^9.35.0",
+    "bun": "^1.2.22",
+    "eslint": "^9.36.0",
     "eslint-config-next": "15.5.2"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "bcrypt",
+      "bun",
       "sharp"
     ]
   }
